Make sure sidebar widgets are not hidden on small screens

--- a/packages/block-library/src/blocks/sidecar/style.scss
+++ b/packages/block-library/src/blocks/sidecar/style.scss
@@ -117,8 +117,11 @@
       transition: var(--nb-transition);
       transition-property: opacity;
 
-      &.novablocks-hidden-block {
-        opacity: 0;
+      @include above(lap) {
+
+        &.novablocks-hidden-block {
+          opacity: 0;
+        }
       }
     }
   }
